:wrench: improve vite config for test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "~/*": ["*"]
     }
   },
-  "include": ["src", "test"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "tests"],
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "types": ["vitest/globals"]
 }
