--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite-tsconfig-paths": "^3.5.0"
   },
   "devDependencies": {
+    "@firebase/rules-unit-testing": "^2.0.4",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -32,6 +33,7 @@
     "fishery": "^2.2.2",
     "prettier": "^2.7.1",
     "typescript": "*",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vitest": "^0.23.4"
   }
 }
